# zus

./: README.md  pyproject.toml
src/zs/: __init__.py
src/zs/api/: diffStore.py  kvstore.py
src/zs/common/: cryptfile.py  zs.py
src/zs/mods/: __init__.py  autokill.py  diff.py  hashpy.py  jq.py  kvstore.py  orgRepos.json  zs.py
