[project]
name = "zus"
version = "0.2.1"
description = "Zackary's Useful Shell"
dependencies = [ "zuu>=7.3.0", "keyring>=25.6.0", "click>=8.1.8",]
readme = "README.md"
requires-python = ">= 3.8"
[[project.authors]]
name = "ZackaryW"
email = "gitzackw@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
"zs.autokill" = "zs.mods.autokill:cli"
"zs.diff" = "zs.mods.diff:cli"
"zs.hashpy" = "zs.mods.hashpy:cli"
"zs.kvstore" = "zs.mods.kvstore:cli"
zs = "zs.mods.zs:cli"

[tool.rye]
managed = true
dev-dependencies = [ "keyrings-cryptfile>=1.3.9", "toml>=0.10.2", "requests>=2.32.3",]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/zs",]

[tool.hatch.build.targets.sdist]
include = [ "src/zs/**/*.py", "src/zs/**/*.json",]
